<resources>
    <string name="app_name">SportsCentricProfileManager</string>
    <string name="soccer_team_manager">Soccer Team Manager</string>
    <string name="please_enter_a_team">(Please enter a team)</string>
    <string name="team_name">Team Name</string>
    <string name="please_enter_a_zip_code">(Please enter a ZIP Code)</string>
    <string name="team_address">Team Address</string>
    <string name="open_in_google_maps">OPEN IN GOOGLE MAPS</string>
    <string name="todo">TODO</string>
    <string name="soccer_team_manager1">Soccer Team Manager</string>
    <string name="please_enter_a_team2">(Please enter a team)</string>
    <string name="team_name2">Team Name</string>
    <string name="todo1">TODO</string>
    <string name="select_a_new_avatar">Select a new Avatar</string>
    <string name="teamid00">teamid00</string>
</resources>
