<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/avatarImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:contentDescription="@string/todo"
                android:onClick="OnSetAvatarButton"
                android:src="@drawable/ic_logo_00"
                android:visibility="visible" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/soccer_team_manager"
                android:textStyle="bold"
                app:fontFamily="monospace"
                tools:textSize="18sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/teamNameField"
                    android:layout_width="228dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:hint="@string/please_enter_a_team"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:singleLine="true"
                    android:textColorHint="#546E7A"
                    app:fontFamily="monospace"
                    tools:singleLine="true"
                    tools:textSize="14sp" />

                <TextView
                    android:id="@+id/teamNameTextField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/team_name"
                    app:fontFamily="monospace"
                    tools:hint="Veillez ajouter un nom"
                    tools:textSize="12sp" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/teamAddressField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:autoSizeTextType="uniform"
                    android:autofillHints=""
                    android:ems="14"
                    android:gravity="center_horizontal"
                    android:hint="@string/please_enter_a_zip_code"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColorHint="#546E7A"
                    app:fontFamily="monospace"
                    tools:targetApi="o"
                    tools:textSize="14sp" />

                <TextView
                    android:id="@+id/teamAddressTextField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:hint="@string/team_address"
                    android:textColorHint="#546E7A"
                    app:fontFamily="monospace" />
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button"
                android:layout_width="290dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:onClick="OnOpenInGoogleMaps"
                android:text="@string/open_in_google_maps" />
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>